<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar_active"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tooBarActivate"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/_32dp"
                    android:layout_height="@dimen/_32dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:clickable="true"
                    android:src="@drawable/ic_menu"
                    android:stateListAnimator="@xml/scale_small"></ImageView>

                <ImageView
                    android:id="@+id/ic_round_chart"
                    android:layout_width="@dimen/_32dp"
                    android:layout_height="@dimen/_32dp"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:src="@drawable/ic_round_chart"
                    android:stateListAnimator="@xml/scale_small"
                    android:tint="@color/white"></ImageView>

                <ImageView
                    android:layout_width="@dimen/_24dp"
                    android:layout_height="@dimen/_24dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="@dimen/_10dp"
                    android:clickable="true"
                    android:src="@drawable/ic_plus"
                    android:stateListAnimator="@xml/scale_small"
                    android:tint="@color/white"></ImageView>
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_18dp"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginRight="@dimen/_18dp"
                android:text="@string/title_1"
                android:textColor="@color/white"
                android:textSize="@dimen/_26dp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_18dp"
                android:layout_marginRight="@dimen/_18dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:text="@string/content_1"
                android:textColor="@color/grey"
                android:textSize="@dimen/_14dp"></TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_18dp"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginRight="@dimen/_18dp"
                android:text="@string/title_2"
                android:textColor="@color/white"
                android:textSize="@dimen/_26dp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_18dp"
                android:layout_marginRight="@dimen/_18dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:text="@string/content_2"
                android:textColor="@color/grey"
                android:textSize="@dimen/_14dp"></TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_18dp"
                android:layout_marginTop="@dimen/_8dp"
                android:layout_marginRight="@dimen/_18dp"
                android:text="@string/title_3"
                android:textColor="@color/white"
                android:textSize="@dimen/_26dp"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_18dp"
                android:layout_marginRight="@dimen/_18dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:text="@string/content_3"
                android:textColor="@color/grey"
                android:textSize="@dimen/_14dp"></TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>